<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_logout"
                app:title="@string/settings" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_time_range"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    android:hint="@string/time_range"
                    app:layout_constraintEnd_toStartOf="@id/iv_apply_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_time_range"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size_16"
                        tools:ignore="SpUsage" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_apply_date"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/padding_4"
                    android:src="@drawable/ic_apply"
                    app:layout_constraintBottom_toBottomOf="@id/til_time_range"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/til_time_range"
                    app:tint="@color/app_main_color"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_chat_id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:hint="@string/chat_id"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toStartOf="@id/iv_apply_chat_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_time_range">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_chat_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/text_size_16"
                        tools:ignore="SpUsage" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_apply_chat_id"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/padding_4"
                    android:src="@drawable/ic_apply"
                    app:layout_constraintBottom_toBottomOf="@id/til_chat_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/til_chat_id"
                    app:tint="@color/app_main_color"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_send_time_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/send_time_message"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintTop_toBottomOf="@id/til_chat_id"
                    tools:ignore="SpUsage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_6"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackCornerRadius="@dimen/corner_radius_8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>